<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Brain Tau Labs GCS</string>
	<string name="object_browser_name">Browser</string>
	<string name="controller_name">Controller</string>
	<string name="main_activity_name">Main"</string>
	<string name="location_name">Map</string>
	<string name="logger_name">Logging</string>
	<string name="home_adjustment">Home Adjustment</string>
	<string name="tablet_control">Tablet Control</string>
	<string name="path_planner">Path Planner</string>
	<string name="logger">Logging</string>
		
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_connect">Connect</string>
	<string name="menu_item_disconnect">Disconnect</string>
	
	<string name="preference_title">Settings</string>
	<string name="preference_checkbox_autoconnect">Automatically Connect</string>
	<string name="preference_checkbox_connection_type">Connection Type</string>
	<string name="preference_checkbox_bluetooth">Bluetooth</string>
	<string name="preference_connection_method_summary">Select the connection method</string>
	
	<string name="drawer_open">Open Drawer</string>
	<string name="drawer_close">Closer Drawer</string>
	
	<string name="compass_name">Compass</string>
	<string name="cardinal_north">N</string>
	<string name="cardinal_east">E</string>
	<string name="cardinal_south">S</string>
	<string name="cardinal_west">W</string>
	<string name="connected">Connected</string>
	<string name="update_button">Update</string>
	<string name="save_button">Save</string>
	<string name="apply_button">Apply</string>
	<string name="manual_control_values_">Manual control values:</string>
	<string name="number_of_objects">Number of objects</string>
	<string name="number_of_bytes">Number of bytes</string>
	<string name="alarms">Alarms</string>
	<string name="txrate">TxRate: </string>
	<string name="rxrate">RxRate: </string>
	<string name="tester">Tester</string>
	<string name="_3dview">3DView</string>
	<string name="tuning">Tuning</string>
	<string name="apply">Apply</string>
	<string name="save">Save</string>
	<string name="settings">Settings</string>
	<string name="data">Data</string>
	<string name="edit">Edit</string>
	<string name="load">Load</string>
	<string name="waypoint">waypoint</string>

	<string name="uiToastNavPrincipal">Main navigation</string>
	<string name="uiToastNavSecond">Second Navigation</string>
	<string name="uiToastLightOn">Light ON</string>
	<string name="uiToastLightOff">Light OFF</string>

	<string name="select_file_to_email_it">Select file to email it</string>

	<string name="jump_to_uav">Jump To UAV</string>

	<string name="advanced_screens">advanced_screens</string>

	<string name="reset_home_location">Reset Home Location</string>

	<string name="reset_home_altitude">Reset Home Altitude</string>

	<string name="_android_attr_textappearancemedium">\?android:attr/textAppearanceMedium</string>

	<string name="pfd">PFD</string>

	<string name="transmitter">Transmitter</string>

	<string name="objecteditor">ObjectEditor</string>

	<string name="reset_home_to_tablet">Reset Home to Tablet</string>

	<string name="these_buttons_only_work_while_disarmed_">These buttons only work while disarmed.</string>

	<string name="zero_tablet_poi_to_uav">Zero tablet POI to UAV</string>

	<string name="flight_mode_">"Flight Mode: "</string>

	<string name="disarmed">Disarmed</string>

	<string name="armed_">"Armed: "</string>

	<string name="clear_uav_path">Clear UAV Path</string>

	<string name="close_button">Close</string>
</resources>
