<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/these_buttons_only_work_while_disarmed_"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Button
	        android:id="@+id/reset_home_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reset_home_location"
	        android:onClick="homeToUav" />
	
	    <Button
	        android:id="@+id/reset_home_altitude"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reset_home_altitude"
	        android:onClick="homeAltitudeToUav" />
	
	    <Button
	        android:id="@+id/reset_home_to_tablet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reset_home_to_tablet"
	        android:onClick="homeToTablet" />
	
	    <Button
	        android:id="@+id/zero_poi_to_uav"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="poiToUAV"
	        android:text="@string/zero_tablet_poi_to_uav" />
	    
	</LinearLayout>        
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
