<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ObjectEditor" >
    
    <!-- View android:layout_width="200dp" android:layout_height="1dip" android:background="#FFFFFFFF" / -->


	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1.56" >

	    <org.taulabs.androidgcs.views.ObjectEditView
	        android:id="@+id/object_edit_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </org.taulabs.androidgcs.views.ObjectEditView>
	</ScrollView>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="64dp"
	    android:layout_weight="1"
	    android:gravity="right" >

		<TextView
		    android:id="@+id/object_edit_object_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text=""/>

		<Button
		    android:id="@+id/object_edit_load_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/load" />

		<Button
		    android:id="@+id/object_edit_apply_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/apply_button" />

		<Button
		    android:id="@+id/object_edit_save_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/save_button" />

	</LinearLayout>
    
</LinearLayout>