<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:setting_attributes="http://schemas.android.com/apk/res/org.taulabs.androidgcs"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/rollRateKp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.01"
                    setting_attributes:setting_name="Roll Rate Kp" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/pitchRateKp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.01"
                    setting_attributes:setting_name="Pitch Rate Kp" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/rollRateKi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.05"
                    setting_attributes:setting_name="Roll Rate Ki" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/pitchRateKi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.05"
                    setting_attributes:setting_name="Pitch Rate Ki" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/rollKp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="5"
                    setting_attributes:setting_name="Roll Kp" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/pitchKp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="5"
                    setting_attributes:setting_name="Pitch Kp" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/rollRateKd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.001"
                    setting_attributes:setting_name="Roll Rate Kd" />

                <org.taulabs.androidgcs.views.ScrollBarView
                    android:id="@+id/pitchRateKd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    setting_attributes:max_value="0.001"
                    setting_attributes:setting_name="Pitch Rate Kd" />
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/save" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/applyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/apply" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/loadBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/load" />
        </LinearLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>